--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
+    "vue-spinner": "^1.0.3",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
